# wavelan-applet

./: AUTHORS  ChangeLog  Makefile.am  README  README.md  configure.in  wavelan-applet.spec.in
macros/: Makefile.in
po/: POTFILES.in  cat-id-tbl.c  da.gmo  da.po  ja.gmo  ja.po  wavelan-applet.pot
src/: GNOME_WaveLanApplet.server  Makefile.am  wavelan-applet-strings.c  wavelan-applet.c  wavelan-applet.desktop  wavelan-applet.glade  wavelan-applet.gnorba  wavelan-applet.schemas  wireless.c
themes/: Makefile.am
themes/airport/: Makefile.am  busted-link.xpm  good-link.xpm  no-link.xpm  ok-link.xpm  really-good-link.xpm  some-link.xpm
themes/default/: Makefile.am  broken-0.xpm  broken-1.xpm  busted-link.xpm  good-link.xpm  no-link-0.xpm  ok-link.xpm  signal-81-100.xpm  some-link.xpm
themes/leds/: Makefile.am  Makefile.in
themes/tard/: Makefile.am  Makefile.in  good-link.xpm  no-link.xpm  ok-link.xpm  really-good-link.xpm  some-link.xpm
themes/wavelan-card/: Makefile.am
