dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(wavelan-applet, 0.6)
AM_CONFIG_HEADER(config.h)

dnl Pick up the Gnome macros.
AM_ACLOCAL_INCLUDE(macros)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

GNOME_COMPILE_WARNINGS
GNOME_X_CHECKS

dnl Add the languages which your application supports here.
ALL_LINGUAS="da"
AM_GNU_GETTEXT

GNOME_INIT(applets)

EEL_CFLAGS="`$GNOME_CONFIG --cflags eel`"
EEL_LIBS="`$GNOME_CONFIG --libs eel`"
AC_SUBST(EEL_CFLAGS)
AC_SUBST(EEL_LIBS)

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
fi

dnl Subst PACKAGE_PIXMAPS_DIR.
PACKAGE_PIXMAPS_DIR="`gnome-config --datadir`/pixmaps/${PACKAGE}"
AC_SUBST(PACKAGE_PIXMAPS_DIR)

dnl GLADE stuff
GNOME_XML_CHECK
AM_PATH_LIBGLADE(,AC_MSG_ERROR(liblade required),gnome)


AC_OUTPUT([
Makefile
macros/Makefile
src/Makefile
intl/Makefile
po/Makefile.in
themes/Makefile
themes/default/Makefile
themes/airport/Makefile
wavelan-applet.spec
])

