AC_PREREQ(2.13)

AC_INIT(configure.in)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(wavelan-applet, 2.8)

AM_MAINTAINER_MODE

AC_PROG_INTLTOOL

dnl Pick up the Gnome macros.
dnl AM_ACLOCAL_INCLUDE(macros)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AM_PROG_LIBTOOL
AC_HEADER_STDC

dnl Add the languages which your application supports here.
ALL_LINGUAS="da"
GETTEXT_PACKAGE=wavelan-applet
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT

gnomelocaledir='${prefix}/${DATADIRNAME}/locale'
AC_SUBST(gnomelocaledir)

PKG_CHECK_MODULES(WAVELANAPPLET, libpanelapplet-2.0 >= 1.5.9 libglade-2.0 >= 1.99.11 littleskin >= 0.2)
AC_SUBST(WAVELANAPPLET_CFLAGS)
AC_SUBST(WAVELANAPPLET_LIBS)

AC_PATH_PROG(GCONFTOOL, gconftool-2)

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
fi

dnl Subst PACKAGE_PIXMAPS_DIR.
PACKAGE_PIXMAPS_DIR="`gnome-config --datadir`/pixmaps/${PACKAGE}"
AC_SUBST(PACKAGE_PIXMAPS_DIR)


AC_OUTPUT([
Makefile
src/Makefile
themes/Makefile
themes/default/Makefile
themes/airport/Makefile
themes/leds/Makefile
themes/tard/Makefile
themes/wavelan-card/Makefile
])

